// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SystemNotice should match snapshot for admin, admin notice 1`] = `
<SystemNotice
  actions={
    Object {
      "dismissNotice": [MockFunction],
      "getStandardAnalytics": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "savePreferences": [MockFunction],
    }
  }
  analytics={
    Object {
      "TOTAL_USERS": 300,
    }
  }
  config={Object {}}
  currentUserId="someid"
  dismissedNotices={Object {}}
  intl={
    Object {
      "formatMessage": [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "defaultMessage": "Only visible to System Admins Icon",
              "id": "system_notice.adminVisible.icon",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  isSystemAdmin={true}
  license={
    Object {
      "IsLicensed": "true",
    }
  }
  notices={
    Array [
      Object {
        "adminOnly": true,
        "allowForget": true,
        "body": "some body",
        "name": "notice1",
        "show": [Function],
        "title": "some title",
      },
    ]
  }
  preferences={Object {}}
  serverVersion="5.1"
>
  <div
    className="system-notice bg--white"
  >
    <div
      className="system-notice__logo"
    >
      <MattermostLogo>
        <span>
          <svg
            aria-label="Mattermost Logo"
            enableBackground="new 0 0 500 500"
            role="img"
            version="1.1"
            viewBox="0 0 500 500"
            x="0px"
            y="0px"
          >
            <g>
              <g>
                <path
                  d="M396.9,47.7l2.6,53.1c43,47.5,60,114.8,38.6,178.1c-32,94.4-137.4,144.1-235.4,110.9 S51.1,253.1,83,158.7C104.5,95.2,159.2,52,222.5,40.5l34.2-40.4C150-2.8,49.3,63.4,13.3,169.9C-31,300.6,39.1,442.5,169.9,486.7 s272.6-25.8,316.9-156.6C522.7,223.9,483.1,110.3,396.9,47.7z"
                  style={
                    Object {
                      "clipRule": "evenodd",
                      "fillRule": "evenodd",
                    }
                  }
                />
              </g>
              <path
                d="M335.6,204.3l-1.8-74.2l-1.5-42.7l-1-37c0,0,0.2-17.8-0.4-22c-0.1-0.9-0.4-1.6-0.7-2.2 c0-0.1-0.1-0.2-0.1-0.3c0-0.1-0.1-0.2-0.1-0.2c-0.7-1.2-1.8-2.1-3.1-2.6c-1.4-0.5-2.9-0.4-4.2,0.2c0,0-0.1,0-0.1,0 c-0.2,0.1-0.3,0.1-0.4,0.2c-0.6,0.3-1.2,0.7-1.8,1.3c-3,3-13.7,17.2-13.7,17.2l-23.2,28.8l-27.1,33l-46.5,57.8 c0,0-21.3,26.6-16.6,59.4s29.1,48.7,48,55.1c18.9,6.4,48,8.5,71.6-14.7C336.4,238.4,335.6,204.3,335.6,204.3z"
                style={
                  Object {
                    "clipRule": "evenodd",
                    "fillRule": "evenodd",
                  }
                }
              />
            </g>
          </svg>
        </span>
      </MattermostLogo>
    </div>
    <div
      className="system-notice__body"
    >
      <div
        className="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        className="system-notice__info"
      >
        <i
          className="fa fa-eye"
        />
        <FormattedMessage
          defaultMessage="Only visible to System Admins"
          id="system_notice.adminVisible"
        >
          <span>
            Only visible to System Admins
          </span>
        </FormattedMessage>
      </div>
      <div
        className="system-notice__footer"
      >
        <button
          className="btn btn-sm btn-primary"
          id="systemnotice_remindme"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Remind Me Later"
            id="system_notice.remind_me"
          >
            <span>
              Remind Me Later
            </span>
          </FormattedMessage>
        </button>
        <button
          className="btn btn-sm btn-tertiary"
          id="systemnotice_dontshow"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Don't Show Again"
            id="system_notice.dont_show"
          >
            <span>
              Don't Show Again
            </span>
          </FormattedMessage>
        </button>
      </div>
    </div>
  </div>
</SystemNotice>
`;

exports[`components/SystemNotice should match snapshot for admin, regular notice 1`] = `
<SystemNotice
  actions={
    Object {
      "dismissNotice": [MockFunction],
      "getStandardAnalytics": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "savePreferences": [MockFunction],
    }
  }
  analytics={
    Object {
      "TOTAL_USERS": 300,
    }
  }
  config={Object {}}
  currentUserId="someid"
  dismissedNotices={Object {}}
  intl={
    Object {
      "formatMessage": [MockFunction],
    }
  }
  isSystemAdmin={true}
  license={
    Object {
      "IsLicensed": "true",
    }
  }
  notices={
    Array [
      Object {
        "adminOnly": false,
        "allowForget": true,
        "body": "some body",
        "name": "notice1",
        "show": [Function],
        "title": "some title",
      },
    ]
  }
  preferences={Object {}}
  serverVersion="5.1"
>
  <div
    className="system-notice bg--white"
  >
    <div
      className="system-notice__logo"
    >
      <MattermostLogo>
        <span>
          <svg
            aria-label="Mattermost Logo"
            enableBackground="new 0 0 500 500"
            role="img"
            version="1.1"
            viewBox="0 0 500 500"
            x="0px"
            y="0px"
          >
            <g>
              <g>
                <path
                  d="M396.9,47.7l2.6,53.1c43,47.5,60,114.8,38.6,178.1c-32,94.4-137.4,144.1-235.4,110.9 S51.1,253.1,83,158.7C104.5,95.2,159.2,52,222.5,40.5l34.2-40.4C150-2.8,49.3,63.4,13.3,169.9C-31,300.6,39.1,442.5,169.9,486.7 s272.6-25.8,316.9-156.6C522.7,223.9,483.1,110.3,396.9,47.7z"
                  style={
                    Object {
                      "clipRule": "evenodd",
                      "fillRule": "evenodd",
                    }
                  }
                />
              </g>
              <path
                d="M335.6,204.3l-1.8-74.2l-1.5-42.7l-1-37c0,0,0.2-17.8-0.4-22c-0.1-0.9-0.4-1.6-0.7-2.2 c0-0.1-0.1-0.2-0.1-0.3c0-0.1-0.1-0.2-0.1-0.2c-0.7-1.2-1.8-2.1-3.1-2.6c-1.4-0.5-2.9-0.4-4.2,0.2c0,0-0.1,0-0.1,0 c-0.2,0.1-0.3,0.1-0.4,0.2c-0.6,0.3-1.2,0.7-1.8,1.3c-3,3-13.7,17.2-13.7,17.2l-23.2,28.8l-27.1,33l-46.5,57.8 c0,0-21.3,26.6-16.6,59.4s29.1,48.7,48,55.1c18.9,6.4,48,8.5,71.6-14.7C336.4,238.4,335.6,204.3,335.6,204.3z"
                style={
                  Object {
                    "clipRule": "evenodd",
                    "fillRule": "evenodd",
                  }
                }
              />
            </g>
          </svg>
        </span>
      </MattermostLogo>
    </div>
    <div
      className="system-notice__body"
    >
      <div
        className="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        className="system-notice__footer"
      >
        <button
          className="btn btn-sm btn-primary"
          id="systemnotice_remindme"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Remind Me Later"
            id="system_notice.remind_me"
          >
            <span>
              Remind Me Later
            </span>
          </FormattedMessage>
        </button>
        <button
          className="btn btn-sm btn-tertiary"
          id="systemnotice_dontshow"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Don't Show Again"
            id="system_notice.dont_show"
          >
            <span>
              Don't Show Again
            </span>
          </FormattedMessage>
        </button>
      </div>
    </div>
  </div>
</SystemNotice>
`;

exports[`components/SystemNotice should match snapshot for regular user, admin and regular notice 1`] = `
<SystemNotice
  actions={
    Object {
      "dismissNotice": [MockFunction],
      "getStandardAnalytics": [MockFunction],
      "savePreferences": [MockFunction],
    }
  }
  analytics={
    Object {
      "TOTAL_USERS": 300,
    }
  }
  config={Object {}}
  currentUserId="someid"
  dismissedNotices={Object {}}
  intl={
    Object {
      "formatMessage": [MockFunction],
    }
  }
  isSystemAdmin={false}
  license={
    Object {
      "IsLicensed": "true",
    }
  }
  notices={
    Array [
      Object {
        "adminOnly": true,
        "allowForget": true,
        "body": "some body",
        "name": "notice1",
        "show": [Function],
        "title": "some title",
      },
      Object {
        "adminOnly": false,
        "allowForget": true,
        "body": "some body2",
        "name": "notice2",
        "show": [Function],
        "title": "some title2",
      },
    ]
  }
  preferences={Object {}}
  serverVersion="5.1"
>
  <div
    className="system-notice bg--white"
  >
    <div
      className="system-notice__logo"
    >
      <MattermostLogo>
        <span>
          <svg
            aria-label="Mattermost Logo"
            enableBackground="new 0 0 500 500"
            role="img"
            version="1.1"
            viewBox="0 0 500 500"
            x="0px"
            y="0px"
          >
            <g>
              <g>
                <path
                  d="M396.9,47.7l2.6,53.1c43,47.5,60,114.8,38.6,178.1c-32,94.4-137.4,144.1-235.4,110.9 S51.1,253.1,83,158.7C104.5,95.2,159.2,52,222.5,40.5l34.2-40.4C150-2.8,49.3,63.4,13.3,169.9C-31,300.6,39.1,442.5,169.9,486.7 s272.6-25.8,316.9-156.6C522.7,223.9,483.1,110.3,396.9,47.7z"
                  style={
                    Object {
                      "clipRule": "evenodd",
                      "fillRule": "evenodd",
                    }
                  }
                />
              </g>
              <path
                d="M335.6,204.3l-1.8-74.2l-1.5-42.7l-1-37c0,0,0.2-17.8-0.4-22c-0.1-0.9-0.4-1.6-0.7-2.2 c0-0.1-0.1-0.2-0.1-0.3c0-0.1-0.1-0.2-0.1-0.2c-0.7-1.2-1.8-2.1-3.1-2.6c-1.4-0.5-2.9-0.4-4.2,0.2c0,0-0.1,0-0.1,0 c-0.2,0.1-0.3,0.1-0.4,0.2c-0.6,0.3-1.2,0.7-1.8,1.3c-3,3-13.7,17.2-13.7,17.2l-23.2,28.8l-27.1,33l-46.5,57.8 c0,0-21.3,26.6-16.6,59.4s29.1,48.7,48,55.1c18.9,6.4,48,8.5,71.6-14.7C336.4,238.4,335.6,204.3,335.6,204.3z"
                style={
                  Object {
                    "clipRule": "evenodd",
                    "fillRule": "evenodd",
                  }
                }
              />
            </g>
          </svg>
        </span>
      </MattermostLogo>
    </div>
    <div
      className="system-notice__body"
    >
      <div
        className="system-notice__title"
      >
        some title2
      </div>
      some body2
      <div
        className="system-notice__footer"
      >
        <button
          className="btn btn-sm btn-primary"
          id="systemnotice_remindme"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Remind Me Later"
            id="system_notice.remind_me"
          >
            <span>
              Remind Me Later
            </span>
          </FormattedMessage>
        </button>
        <button
          className="btn btn-sm btn-tertiary"
          id="systemnotice_dontshow"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Don't Show Again"
            id="system_notice.dont_show"
          >
            <span>
              Don't Show Again
            </span>
          </FormattedMessage>
        </button>
      </div>
    </div>
  </div>
</SystemNotice>
`;

exports[`components/SystemNotice should match snapshot for regular user, admin notice 1`] = `
<SystemNotice
  actions={
    Object {
      "dismissNotice": [MockFunction],
      "getStandardAnalytics": [MockFunction],
      "savePreferences": [MockFunction],
    }
  }
  analytics={
    Object {
      "TOTAL_USERS": 300,
    }
  }
  config={Object {}}
  currentUserId="someid"
  dismissedNotices={Object {}}
  intl={
    Object {
      "formatMessage": [MockFunction],
    }
  }
  isSystemAdmin={false}
  license={
    Object {
      "IsLicensed": "true",
    }
  }
  notices={
    Array [
      Object {
        "adminOnly": true,
        "allowForget": true,
        "body": "some body",
        "name": "notice1",
        "show": [Function],
        "title": "some title",
      },
    ]
  }
  preferences={Object {}}
  serverVersion="5.1"
/>
`;

exports[`components/SystemNotice should match snapshot for regular user, dismissed notice 1`] = `
<SystemNotice
  actions={
    Object {
      "dismissNotice": [MockFunction],
      "getStandardAnalytics": [MockFunction],
      "savePreferences": [MockFunction],
    }
  }
  analytics={
    Object {
      "TOTAL_USERS": 300,
    }
  }
  config={Object {}}
  currentUserId="someid"
  dismissedNotices={
    Object {
      "notice1": true,
    }
  }
  intl={
    Object {
      "formatMessage": [MockFunction],
    }
  }
  isSystemAdmin={false}
  license={
    Object {
      "IsLicensed": "true",
    }
  }
  notices={
    Array [
      Object {
        "adminOnly": false,
        "allowForget": true,
        "body": "some body",
        "name": "notice1",
        "show": [Function],
        "title": "some title",
      },
    ]
  }
  preferences={Object {}}
  serverVersion="5.1"
/>
`;

exports[`components/SystemNotice should match snapshot for regular user, dont show again notice 1`] = `
<SystemNotice
  actions={
    Object {
      "dismissNotice": [MockFunction],
      "getStandardAnalytics": [MockFunction],
      "savePreferences": [MockFunction],
    }
  }
  analytics={
    Object {
      "TOTAL_USERS": 300,
    }
  }
  config={Object {}}
  currentUserId="someid"
  dismissedNotices={Object {}}
  intl={
    Object {
      "formatMessage": [MockFunction],
    }
  }
  isSystemAdmin={false}
  license={
    Object {
      "IsLicensed": "true",
    }
  }
  notices={
    Array [
      Object {
        "adminOnly": false,
        "allowForget": true,
        "body": "some body",
        "name": "notice1",
        "show": [Function],
        "title": "some title",
      },
    ]
  }
  preferences={
    Object {
      "notice1": Object {},
    }
  }
  serverVersion="5.1"
/>
`;

exports[`components/SystemNotice should match snapshot for regular user, no notice 1`] = `
<SystemNotice
  actions={
    Object {
      "dismissNotice": [MockFunction],
      "getStandardAnalytics": [MockFunction],
      "savePreferences": [MockFunction],
    }
  }
  analytics={
    Object {
      "TOTAL_USERS": 300,
    }
  }
  config={Object {}}
  currentUserId="someid"
  dismissedNotices={Object {}}
  intl={
    Object {
      "formatMessage": [MockFunction],
    }
  }
  isSystemAdmin={false}
  license={
    Object {
      "IsLicensed": "true",
    }
  }
  notices={Array []}
  preferences={Object {}}
  serverVersion="5.1"
/>
`;

exports[`components/SystemNotice should match snapshot for regular user, regular notice 1`] = `
<SystemNotice
  actions={
    Object {
      "dismissNotice": [MockFunction],
      "getStandardAnalytics": [MockFunction],
      "savePreferences": [MockFunction],
    }
  }
  analytics={
    Object {
      "TOTAL_USERS": 300,
    }
  }
  config={Object {}}
  currentUserId="someid"
  dismissedNotices={Object {}}
  intl={
    Object {
      "formatMessage": [MockFunction],
    }
  }
  isSystemAdmin={false}
  license={
    Object {
      "IsLicensed": "true",
    }
  }
  notices={
    Array [
      Object {
        "adminOnly": false,
        "allowForget": true,
        "body": "some body",
        "name": "notice1",
        "show": [Function],
        "title": "some title",
      },
    ]
  }
  preferences={Object {}}
  serverVersion="5.1"
>
  <div
    className="system-notice bg--white"
  >
    <div
      className="system-notice__logo"
    >
      <MattermostLogo>
        <span>
          <svg
            aria-label="Mattermost Logo"
            enableBackground="new 0 0 500 500"
            role="img"
            version="1.1"
            viewBox="0 0 500 500"
            x="0px"
            y="0px"
          >
            <g>
              <g>
                <path
                  d="M396.9,47.7l2.6,53.1c43,47.5,60,114.8,38.6,178.1c-32,94.4-137.4,144.1-235.4,110.9 S51.1,253.1,83,158.7C104.5,95.2,159.2,52,222.5,40.5l34.2-40.4C150-2.8,49.3,63.4,13.3,169.9C-31,300.6,39.1,442.5,169.9,486.7 s272.6-25.8,316.9-156.6C522.7,223.9,483.1,110.3,396.9,47.7z"
                  style={
                    Object {
                      "clipRule": "evenodd",
                      "fillRule": "evenodd",
                    }
                  }
                />
              </g>
              <path
                d="M335.6,204.3l-1.8-74.2l-1.5-42.7l-1-37c0,0,0.2-17.8-0.4-22c-0.1-0.9-0.4-1.6-0.7-2.2 c0-0.1-0.1-0.2-0.1-0.3c0-0.1-0.1-0.2-0.1-0.2c-0.7-1.2-1.8-2.1-3.1-2.6c-1.4-0.5-2.9-0.4-4.2,0.2c0,0-0.1,0-0.1,0 c-0.2,0.1-0.3,0.1-0.4,0.2c-0.6,0.3-1.2,0.7-1.8,1.3c-3,3-13.7,17.2-13.7,17.2l-23.2,28.8l-27.1,33l-46.5,57.8 c0,0-21.3,26.6-16.6,59.4s29.1,48.7,48,55.1c18.9,6.4,48,8.5,71.6-14.7C336.4,238.4,335.6,204.3,335.6,204.3z"
                style={
                  Object {
                    "clipRule": "evenodd",
                    "fillRule": "evenodd",
                  }
                }
              />
            </g>
          </svg>
        </span>
      </MattermostLogo>
    </div>
    <div
      className="system-notice__body"
    >
      <div
        className="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        className="system-notice__footer"
      >
        <button
          className="btn btn-sm btn-primary"
          id="systemnotice_remindme"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Remind Me Later"
            id="system_notice.remind_me"
          >
            <span>
              Remind Me Later
            </span>
          </FormattedMessage>
        </button>
        <button
          className="btn btn-sm btn-tertiary"
          id="systemnotice_dontshow"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Don't Show Again"
            id="system_notice.dont_show"
          >
            <span>
              Don't Show Again
            </span>
          </FormattedMessage>
        </button>
      </div>
    </div>
  </div>
</SystemNotice>
`;

exports[`components/SystemNotice should match snapshot for show function returning false 1`] = `
<SystemNotice
  actions={
    Object {
      "dismissNotice": [MockFunction],
      "getStandardAnalytics": [MockFunction],
      "savePreferences": [MockFunction],
    }
  }
  analytics={
    Object {
      "TOTAL_USERS": 300,
    }
  }
  config={Object {}}
  currentUserId="someid"
  dismissedNotices={Object {}}
  intl={
    Object {
      "formatMessage": [MockFunction],
    }
  }
  isSystemAdmin={false}
  license={
    Object {
      "IsLicensed": "true",
    }
  }
  notices={
    Array [
      Object {
        "adminOnly": false,
        "allowForget": true,
        "body": "some body",
        "name": "notice1",
        "show": [Function],
        "title": "some title",
      },
    ]
  }
  preferences={Object {}}
  serverVersion="5.1"
/>
`;

exports[`components/SystemNotice should match snapshot for show function returning true 1`] = `
<SystemNotice
  actions={
    Object {
      "dismissNotice": [MockFunction],
      "getStandardAnalytics": [MockFunction],
      "savePreferences": [MockFunction],
    }
  }
  analytics={
    Object {
      "TOTAL_USERS": 300,
    }
  }
  config={Object {}}
  currentUserId="someid"
  dismissedNotices={Object {}}
  intl={
    Object {
      "formatMessage": [MockFunction],
    }
  }
  isSystemAdmin={false}
  license={
    Object {
      "IsLicensed": "true",
    }
  }
  notices={
    Array [
      Object {
        "adminOnly": false,
        "allowForget": true,
        "body": "some body",
        "name": "notice1",
        "show": [Function],
        "title": "some title",
      },
    ]
  }
  preferences={Object {}}
  serverVersion="5.1"
>
  <div
    className="system-notice bg--white"
  >
    <div
      className="system-notice__logo"
    >
      <MattermostLogo>
        <span>
          <svg
            aria-label="Mattermost Logo"
            enableBackground="new 0 0 500 500"
            role="img"
            version="1.1"
            viewBox="0 0 500 500"
            x="0px"
            y="0px"
          >
            <g>
              <g>
                <path
                  d="M396.9,47.7l2.6,53.1c43,47.5,60,114.8,38.6,178.1c-32,94.4-137.4,144.1-235.4,110.9 S51.1,253.1,83,158.7C104.5,95.2,159.2,52,222.5,40.5l34.2-40.4C150-2.8,49.3,63.4,13.3,169.9C-31,300.6,39.1,442.5,169.9,486.7 s272.6-25.8,316.9-156.6C522.7,223.9,483.1,110.3,396.9,47.7z"
                  style={
                    Object {
                      "clipRule": "evenodd",
                      "fillRule": "evenodd",
                    }
                  }
                />
              </g>
              <path
                d="M335.6,204.3l-1.8-74.2l-1.5-42.7l-1-37c0,0,0.2-17.8-0.4-22c-0.1-0.9-0.4-1.6-0.7-2.2 c0-0.1-0.1-0.2-0.1-0.3c0-0.1-0.1-0.2-0.1-0.2c-0.7-1.2-1.8-2.1-3.1-2.6c-1.4-0.5-2.9-0.4-4.2,0.2c0,0-0.1,0-0.1,0 c-0.2,0.1-0.3,0.1-0.4,0.2c-0.6,0.3-1.2,0.7-1.8,1.3c-3,3-13.7,17.2-13.7,17.2l-23.2,28.8l-27.1,33l-46.5,57.8 c0,0-21.3,26.6-16.6,59.4s29.1,48.7,48,55.1c18.9,6.4,48,8.5,71.6-14.7C336.4,238.4,335.6,204.3,335.6,204.3z"
                style={
                  Object {
                    "clipRule": "evenodd",
                    "fillRule": "evenodd",
                  }
                }
              />
            </g>
          </svg>
        </span>
      </MattermostLogo>
    </div>
    <div
      className="system-notice__body"
    >
      <div
        className="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        className="system-notice__footer"
      >
        <button
          className="btn btn-sm btn-primary"
          id="systemnotice_remindme"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Remind Me Later"
            id="system_notice.remind_me"
          >
            <span>
              Remind Me Later
            </span>
          </FormattedMessage>
        </button>
        <button
          className="btn btn-sm btn-tertiary"
          id="systemnotice_dontshow"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Don't Show Again"
            id="system_notice.dont_show"
          >
            <span>
              Don't Show Again
            </span>
          </FormattedMessage>
        </button>
      </div>
    </div>
  </div>
</SystemNotice>
`;

exports[`components/SystemNotice should match snapshot for with allowForget equal false 1`] = `
<SystemNotice
  actions={
    Object {
      "dismissNotice": [MockFunction],
      "getStandardAnalytics": [MockFunction],
      "savePreferences": [MockFunction],
    }
  }
  analytics={
    Object {
      "TOTAL_USERS": 300,
    }
  }
  config={Object {}}
  currentUserId="someid"
  dismissedNotices={Object {}}
  intl={
    Object {
      "formatMessage": [MockFunction],
    }
  }
  isSystemAdmin={false}
  license={
    Object {
      "IsLicensed": "true",
    }
  }
  notices={
    Array [
      Object {
        "adminOnly": false,
        "allowForget": false,
        "body": "some body",
        "name": "notice1",
        "show": [Function],
        "title": "some title",
      },
    ]
  }
  preferences={Object {}}
  serverVersion="5.1"
>
  <div
    className="system-notice bg--white"
  >
    <div
      className="system-notice__logo"
    >
      <MattermostLogo>
        <span>
          <svg
            aria-label="Mattermost Logo"
            enableBackground="new 0 0 500 500"
            role="img"
            version="1.1"
            viewBox="0 0 500 500"
            x="0px"
            y="0px"
          >
            <g>
              <g>
                <path
                  d="M396.9,47.7l2.6,53.1c43,47.5,60,114.8,38.6,178.1c-32,94.4-137.4,144.1-235.4,110.9 S51.1,253.1,83,158.7C104.5,95.2,159.2,52,222.5,40.5l34.2-40.4C150-2.8,49.3,63.4,13.3,169.9C-31,300.6,39.1,442.5,169.9,486.7 s272.6-25.8,316.9-156.6C522.7,223.9,483.1,110.3,396.9,47.7z"
                  style={
                    Object {
                      "clipRule": "evenodd",
                      "fillRule": "evenodd",
                    }
                  }
                />
              </g>
              <path
                d="M335.6,204.3l-1.8-74.2l-1.5-42.7l-1-37c0,0,0.2-17.8-0.4-22c-0.1-0.9-0.4-1.6-0.7-2.2 c0-0.1-0.1-0.2-0.1-0.3c0-0.1-0.1-0.2-0.1-0.2c-0.7-1.2-1.8-2.1-3.1-2.6c-1.4-0.5-2.9-0.4-4.2,0.2c0,0-0.1,0-0.1,0 c-0.2,0.1-0.3,0.1-0.4,0.2c-0.6,0.3-1.2,0.7-1.8,1.3c-3,3-13.7,17.2-13.7,17.2l-23.2,28.8l-27.1,33l-46.5,57.8 c0,0-21.3,26.6-16.6,59.4s29.1,48.7,48,55.1c18.9,6.4,48,8.5,71.6-14.7C336.4,238.4,335.6,204.3,335.6,204.3z"
                style={
                  Object {
                    "clipRule": "evenodd",
                    "fillRule": "evenodd",
                  }
                }
              />
            </g>
          </svg>
        </span>
      </MattermostLogo>
    </div>
    <div
      className="system-notice__body"
    >
      <div
        className="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        className="system-notice__footer"
      >
        <button
          className="btn btn-sm btn-primary"
          id="systemnotice_remindme"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Remind Me Later"
            id="system_notice.remind_me"
          >
            <span>
              Remind Me Later
            </span>
          </FormattedMessage>
        </button>
      </div>
    </div>
  </div>
</SystemNotice>
`;

exports[`components/SystemNotice should match snapshot when a custom icon is passed 1`] = `
<SystemNotice
  actions={
    Object {
      "dismissNotice": [MockFunction],
      "getStandardAnalytics": [MockFunction],
      "savePreferences": [MockFunction],
    }
  }
  analytics={
    Object {
      "TOTAL_USERS": 300,
    }
  }
  config={Object {}}
  currentUserId="someid"
  dismissedNotices={Object {}}
  intl={
    Object {
      "formatMessage": [MockFunction],
    }
  }
  isSystemAdmin={false}
  license={
    Object {
      "IsLicensed": "true",
    }
  }
  notices={
    Array [
      Object {
        "adminOnly": false,
        "allowForget": true,
        "body": "some body",
        "icon": <span>
          icon
        </span>,
        "name": "notice1",
        "show": [Function],
        "title": "some title",
      },
    ]
  }
  preferences={Object {}}
  serverVersion="5.1"
>
  <div
    className="system-notice bg--white"
  >
    <div
      className="system-notice__logo"
    >
      <span>
        icon
      </span>
    </div>
    <div
      className="system-notice__body"
    >
      <div
        className="system-notice__title"
      >
        some title
      </div>
      some body
      <div
        className="system-notice__footer"
      >
        <button
          className="btn btn-sm btn-primary"
          id="systemnotice_remindme"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Remind Me Later"
            id="system_notice.remind_me"
          >
            <span>
              Remind Me Later
            </span>
          </FormattedMessage>
        </button>
        <button
          className="btn btn-sm btn-tertiary"
          id="systemnotice_dontshow"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Don't Show Again"
            id="system_notice.dont_show"
          >
            <span>
              Don't Show Again
            </span>
          </FormattedMessage>
        </button>
      </div>
    </div>
  </div>
</SystemNotice>
`;
